# mycoder

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-28-multi-provider-design.md  2026-02-28-multi-provider-plan.md
mycoder/: __init__.py  agent.py  cli.py  config.py
mycoder/memory/: store.py
mycoder/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
mycoder/tools/: builtin.py  files.py  registry.py  shell.py
tests/: test_agent.py  test_builtin.py  test_config.py  test_files.py  test_integration.py  test_provider_anthropic.py  test_provider_google.py  test_provider_openai.py  test_provider_registry.py  test_providers_base.py  test_registry.py  test_shell.py  test_store.py
